--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="buttons">
             <div class="numbers">
                 <div class="row 1">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
                 </div>
                 <div class="row 2">
                     <button>4</button>
@@ -25,9 +25,12 @@
                     <button>6</button>
                 </div>
                 <div class="row 3">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                </div>
+                <div class="row 4">
+                    <button>0</button>
                 </div>
             </div>
             <div class="operations">
